feat: map for consult by location
